# aethos

./: .codecov.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  MANIFEST.in  MOTIVATION.md  Pipfile  README.md  TECHNIQUES.md  VISION.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.ipynb
.circleci/: config.yml
.github/: config.yml
aethos/: __init__.py  analysis.py  cli.py  core.py  helpers.py  test_unittest.py  util.py
clean/: clean.py  numeric.py  test_unittest.py  util.py
cleaning/: base.py  categorical.py  clean.py  numeric.py  test_unittest.py  text.py  util.py  utils.py
data/: data.py  datavalidation.py  test_unittest.py  util.py
docker/: Dockerfile  docker-compose.debug.yml  docker-compose.yml
docs/: conf.py  generate_docs.sh  index.rst  requirements.txt
examples/: Aethos Titanic.ipynb  Modelling with Aethos.ipynb  Py-automl Basic Example (v 0.1.0).ipynb  PyautoML Titanic.ipynb  Titanic23-08-2019_12-03-36AM.txt  titanic_summary.html  visualizations.ipynb
feature-extraction/: base.py  categorical.py  feature.py  test_unittest.py  text.py
feature_engineering/: categorical.py  feature.py  test_unittest.py  text.py
preprocess/: numeric.py  preprocess.py  test_unittest.py
preprocessing/: base.py  numeric.py  preprocess.py  test_unittest.py
pyautoml/: __init__.py  base.py  cli.py  core.py  requirements.txt  technique_reasons.yml  test_unittest.py  util.py
report/: report.py  test_unittest.py
reporting/: test_unittest.py
tests/: test_feature_eng.py  test_preprocessing.py
(+728 files in other folders)
