[tool.poetry]
name = "aethos"
version = "2.0.1"
description = "A library of data science and machine learning techniques to help automate your workflow."
authors = ["Ashton Sidhu <ashton.sidhu1994@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.5.2"
scikit-learn = "^1.1.3"
textblob = "^0.17.1"
matplotlib = "^3.6.2"
pandas-summary = "^0.2.0"
ptitprince = "^0.2.6"
nltk = "^3.7"
gensim = "^4.2.0"
pandas-profiling = "^3.5.0"
shap = "^0.41.0"
interpret = "^0.3.0"
yellowbrick = "^1.5"
spacy = "^3.4.3"
xgboost = "^1.7.1"
itables = "^1.3.5"
graphviz = "^0.20.1"
pyLDAvis = "^3.3.1"
swifter = "^1.3.4"
mlflow = "^2.0.1"
statsmodels = "^0.13.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
